BF-309: fix null position ordering fixture